--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -4,9 +4,9 @@ $color-primary-light: #ae92ab;
 
 $color-secondary-semi-light: #977994;
 $color-secondary-lighter: #c1acbf;
-$color-secondary-light: #a88aa5;
-$color-secondary: #4D394B; /* Sidebar */
-$color-secondary-dark: #3e2e3d;
+$color-secondary-light: #70a8a8;
+$color-secondary: #197575; /* Sidebar */
+$color-secondary-dark: #197575;
 $color-secondary-darker: #30232e; /* Teamswitcher */
 
 $color-accent: #BF55EC;
