--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -3,7 +3,7 @@ $color-primary-dark: #73292c;
 $color-primary-light: #ae92ab;
 
 $color-secondary-semi-light: #977994;
-$color-secondary-lighter: #c1acbf;
+$color-secondary-lighter: #ccc;
 $color-secondary-light: #70a8a8;
 $color-secondary: #197575; /* Sidebar */
 $color-secondary-dark: #197575;
