More color tweaks

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -2,7 +2,7 @@ $color-primary: #ae92ab;
 $color-primary-dark: #73292c;
 $color-primary-light: #ae92ab;
 
-$color-secondary-semi-light: #977994;
+$color-secondary-semi-light: #70a8a8;
 $color-secondary-lighter: #ccc;
 $color-secondary-light: #70a8a8;
 $color-secondary: #197575; /* Sidebar */
