--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -2,11 +2,11 @@ $color-primary: #ae92ab;
 $color-primary-dark: #73292c;
 $color-primary-light: #ae92ab;
 
-$color-secondary-semi-light: #70a8a8;
+$color-secondary-semi-light: #5959FC;
 $color-secondary-lighter: #ccc;
-$color-secondary-light: #70a8a8;
-$color-secondary: #197575; /* Sidebar */
-$color-secondary-dark: #197575;
+$color-secondary-light: #5959FC;
+$color-secondary: #1E22CA; /* Sidebar */
+$color-secondary-dark: #1E22CA;
 $color-secondary-darker: #30232e; /* Teamswitcher */
 
 $color-accent: #BF55EC;
